# Polaris

./: README.md
Code/K210/Polaris/: CMakeLists.txt  README.md
Code/K210/Polaris/project/: CMakelists.txt
Code/K210/Polaris/sdk/k210/cmake/: CMakeLists.txt  executable.cmake
Code/K210/Polaris/sdk/k210/lib/: CMakeLists.txt
Hardware/: README.md
Hardware/PCBLibDesign_Temp/K210/: K210.PcbLib  K210.SchLib
Hardware/PCBLibDesign_Temp/Lib/K210/: K210.PcbLib  K210.SchLib
Hardware/PCBLibDesign_Temp/TempProject/: Temp.PcbDoc  Temp.SchDoc
Hardware/PCBLibDesign_Temp/TempProject/TempProject/: Temp.PcbDoc  Temp.SchDoc  TempProject.PrjPcb  TempProject.PrjPcbStructure
Hardware/PCBLibDesign_Temp/TempProject/TempProject/__Previews/: Temp.SchDocPreview
Hardware/PCBLibDesign_Temp/TempProject/__Previews/: Temp.SchDocPreview
Hardware/Polaris/: README.md
Mechanic/PCB3DLib/GD25LQ128DWIGR/: GD25LQ128DWIGR.SLDPRT  GD25LQ128DWIGR.STEP
Mechanic/PCB3DLib/HMC5883L/: HMC5883L.SLDPRT
Mechanic/PCB3DLib/K210/: K210.SLDPRT  K210.STEP
Mechanic/PCB3DLib/MPU6500/: MPU6500.SLDPRT
Mechanic/PCB3DLib/RY1303/: RY1303.SLDPRT  RY1303.STEP
Software/Android/Polaris/: README.md  build.gradle  settings.gradle
Software/Android/Polaris/app/: build.gradle
Software/Android/Polaris/app/debug/: app-debug.apk  output-metadata.json
Software/Android/Polaris/app/release/: app-release.apk  output-metadata.json
Software/Android/Polaris/app/src/androidTest/java/com/coddffee/polaris/: ExampleInstrumentedTest.java
Software/Android/Polaris/app/src/main/: AndroidManifest.xml
Software/Android/Polaris/app/src/main/java/com/coddffee/polaris/: MainActivity.java
Software/Android/Polaris/app/src/main/java/com/coddffee/polaris/urlmap/: AMapUrl.java  AMapUrlConnection.java
Software/Android/Polaris/app/src/main/java/com/coddffee/polaris/utils/: AMapUtils.java  AndroidUtils.java
Software/Android/Polaris/app/src/main/res/drawable/: edittextshape.xml
Software/Android/Polaris/app/src/main/res/layout/: activity_main.xml
Software/Android/Polaris/app/src/test/java/com/coddffee/polaris/: ExampleUnitTest.java
Software/Android/Polaris/gradle/wrapper/: gradle-wrapper.properties
Software/K210/Polaris/: CMakeLists.txt
Software/K210/Polaris/project/: main.c
Software/K210/Polaris/sdk/k210/cmake/: executable.cmake
